# proxy_tools

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: build-macos.yml  import-project.yml  release.yml
config/: settings.example.json  targets.json
docs/: prototype.md  usage.md
scripts/: build_exe.ps1  build_macos.sh  pyinstaller_entry.py
src/proxy_tools/: __init__.py  __main__.py  app.py  browser_checker.py  categories.py  checker.py  config.py  i18n.py  models.py  proxy_latency.py  third_party.py
